
    MAPREDUCE-4414. Add main methods to JobConf and YarnConfiguration,
    for debug purposes. (Plamen Jeliazkov via harsh)

    MAPREDUCE-5755. MapTask.MapOutputBuffer#compare/swap should have
    @Override annotation. (ozawa)

    MAPREDUCE-6282. Reuse historyFileAbsolute.getFileSystem in
    CompletedJob#loadFullHistoryData for code optimization.
    (zxu via rkanter)

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6314. TestPipeApplication fails on trunk.
    (Varun Vasudev via harsh)

    MAPREDUCE-5448. MapFileOutputFormat#getReaders bug with hidden
    files/folders. (Maysam Yabandeh via harsh)

    MAPREDUCE-6213. NullPointerException caused by job history server addr not
    resolvable. (Peng Zhang via harsh)

    MAPREDUCE-6281. Fix javadoc in Terasort. (Albert Chu via ozawa)

    MAPREDUCE-6242. Progress report log is incredibly excessive in 
    application master. (Varun Saxena via devaraj)

    MAPREDUCE-6294. Remove an extra parameter described in Javadoc of
    TockenCache. (Brahma Reddy Battula via ozawa)

    MAPREDUCE-5875. Make Counter limits consistent across JobClient, 
    MRAppMaster, and YarnChild. (Gera Shegalov via kasha)

    MAPREDUCE-6199. AbstractCounters are not reset completely on
    deserialization (adhoot via rkanter)

    MAPREDUCE-6286. A typo in HistoryViewer makes some code useless, which
    causes counter limits are not reset correctly.
    (Zhihai Xu via harsh)

    MAPREDUCE-4844. Counters / AbstractCounters have constant references not
    declared final. (Brahma Reddy Battula via gera)

    MAPREDUCE-6266. Job#getTrackingURL should consistently return a proper URL
    (rchiang via rkanter)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6227. DFSIO for truncate. (shv via yliu)

    MAPREDUCE-6228. Add truncate operation to SLive. (Plamen Jeliazkov via shv)
