@@ -4580,7 +4580,6 @@
     "mapreduce.job.outputformat.class" : "org.apache.hadoop.examples.terasort.TeraOutputFormat",
     "hadoop.jetty.logs.serve.aliases" : "true",
     "hadoop.http.authentication.kerberos.principal" : "HTTP/_HOST@LOCALHOST",
-    "mapreduce.tasktracker.taskmemorymanager.monitoringinterval" : "5000",
     "mapreduce.job.reduce.shuffle.consumer.plugin.class" : "org.apache.hadoop.mapreduce.task.reduce.Shuffle",
     "s3native.blocksize" : "67108864",
     "dfs.namenode.edits.dir" : "${dfs.namenode.name.dir}",
@@ -9690,7 +9689,6 @@
     "mapreduce.job.outputformat.class" : "org.apache.hadoop.examples.terasort.TeraOutputFormat",
     "hadoop.jetty.logs.serve.aliases" : "true",
     "hadoop.http.authentication.kerberos.principal" : "HTTP/_HOST@LOCALHOST",
-    "mapreduce.tasktracker.taskmemorymanager.monitoringinterval" : "5000",
     "mapreduce.job.reduce.shuffle.consumer.plugin.class" : "org.apache.hadoop.mapreduce.task.reduce.Shuffle",
     "s3native.blocksize" : "67108864",
     "dfs.namenode.edits.dir" : "${dfs.namenode.name.dir}",
